--- a/toilet.html
+++ b/toilet.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <div class="wrapper3" id="blur">
-        <div class="btn-wrapper">  
+        <div class="btn-wrapper">
+            <a href="http://expo.iamcommunity.co.id/games/games1/games1.html"><button class="btn-game1" style="border: 0; outline: 0;"></button></a>
+            <a href="http://expo.iamcommunity.co.id/games/games2/games2.html"><button class="btn-game1" style="border: 0; outline: 0;"></button></a>
+            <a href="http://expo.iamcommunity.co.id/games/games3/games3.html"><button class="btn-game1" style="border: 0; outline: 0;"></button></a>
         </div>
     </div>
